view tally by location, remove candidate menu, a lot more